fixed css letter spacing on temp

--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ main {
 
 .weather-app-temperature {
   font-size: 88px;
-  letter-spacing: -10px;
+  letter-spacing: -6px;
   font-weight: 400px;
   margin-left: 10px;
   margin-right: 10px;
